turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:20: error: type mismatch;
 found   : Unit
 required: Int
	 indice = indiceCouleur(c, colors)
                               ^LangtonsAnt:21: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	 setCouleurBrosse(couleurSuivante(indice, colors))
                                         ^LangtonsAnt:26: error: not found: value n
	if(n==rule.length-1){ 
           ^LangtonsAnt:35: error: not found: value n
		if(rule(n)=='R'){
                        ^